modified jupyter notebook with notes from Azure exercises

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -48,7 +48,19 @@
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "cpu_cluster_name = \"arvc-cpu-cluster\"\n",
+    "\n",
+    "# Verify that cluster does not exist already\n",
+    "try:\n",
+    "    cpu_cluster = ComputeTarget(workspace=ws, name=cpu_cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2', max_nodes=4)\n",
+    "    cpu_cluster = ComputeTarget.create(ws, cpu_cluster_name, compute_config)\n",
+    "\n",
+    "cpu_cluster.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -80,19 +92,24 @@
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "ps = RandomParameterSampling( {\n",
+    "        \"--C\": uniform(0.00, 2.5),\n",
+    "        \"--max_iter\": randint(250)\n",
+    "    }\n",
+    ")\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "policy = BanditPolicy(evaluation_interval=2, slack_factor=0.1)\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = ### YOUR CODE HERE ###\n",
+    "est = SKLearn(source_directory=\".\", compute_target=cpu_cluster, entry_script='train.py')\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "hyperdrive_config = HyperDriveConfig(estimator=est, hyperparameter_sampling=ps, policy=policy, primary_metric_name=\"Accuracy\", \n",
+    "primary_metric_goal=PrimaryMetricGoal.MAXIMIZE, max_total_runs=50, max_concurrent_runs=10, max_duration_minutes=30)"
    ]
   },
   {
@@ -103,7 +120,10 @@
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "hdr = exp.submit(config=hyperdrive_config)\n",
+    "\n",
+    "RunDetails(hdr).show()"
    ]
   },
   {
@@ -128,7 +148,21 @@
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "best_run = hdr.get_best_run_by_primary_metric()\n",
+    "\n",
+    "if best_run is None: \n",
+    "    raise Exception(\"No best run was found\")\n",
+    "\n",
+    "parameter_values = best_run.get_details()['runDefinition']['arguments']\n",
+    "\n",
+    "print(parameter_values)\n",
+    "\n",
+    "os.makedirs(\"best_run_model_files\", exist_ok=True)\n",
+    "\n",
+    "for f in best_run.get_file_names():\n",
+    "    if f == \"outputs/model.pkl\":\n",
+    "        best_run.download_file(name=f, output_file_path = os.path.join(\"best_run_model_files\", os.path.basename(f)))"
    ]
   },
   {
@@ -143,7 +177,8 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "ds = TabularDatasetFactory.from_delimited_files(\"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\",validate=True, include_path=False, infer_column_types=True, set_column_types=None, separator=',', header=True, partition_format=None, support_multi_line=False, empty_as_string=False)"
    ]
   },
   {
@@ -168,7 +203,24 @@
     "from train import clean_data\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "x, y = clean_data(ds)\n",
+    "\n",
+    "#combine x,y back into a single pandas dataframe\n",
+    "import pandas as pd\n",
+    "df = x.merge(y.rename('y'), left_index=True, right_index=True)\n",
+    "os.makedirs(\"data\", exist_ok=True)\n",
+    "local_path = \"data/prepared.csv\"\n",
+    "\n",
+    "#save pandas dataframe to csv\n",
+    "df.to_csv(local_path)\n",
+    "\n",
+    "#upload csv to azure data store\n",
+    "datastore = ws.get_default_datastore()\n",
+    "datastore.upload(src_dir=\"data\", target_path=\"data\")\n",
+    "\n",
+    "#read the new csv from Datastore as Tabulardataset\n",
+    "from azureml.core import Dataset\n",
+    "tabulardataset = Dataset.Tabular.from_delimited_files(path=[(datastore, (\"data/prepared.csv\"))])"
    ]
   },
   {
@@ -198,11 +250,13 @@
     "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    task='classification',\n",
+    "    primary_metric='AUC_weighted',\n",
+    "    training_data=tabulardataset,\n",
+    "    label_column_name='y',\n",
+    "    compute_target = cpu_cluster,\n",
+    "    n_cross_validations=10,\n",
+    "    max_concurrent_iterations=25)"
    ]
   },
   {
@@ -223,7 +277,8 @@
    "source": [
     "# Submit your automl run\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "automl_run = exp.submit(automl_config, show_output=False)"
    ]
   },
   {
@@ -234,7 +289,10 @@
    "source": [
     "# Retrieve and save your best automl model.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "best_run, fitted_model = automl_run.get_output()\n",
+    "os.makedirs(\"best_run_model_files\", exist_ok=True)\n",
+    "joblib.dump(fitted_model, os.path.join(\"best_run_model_files\", \"model.pkl\"))"
    ]
   }
  ],
@@ -257,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
