--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -88,7 +88,7 @@
     "from azureml.train.hyperdrive.policy import BanditPolicy\n",
     "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
     "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
-    "from azureml.train.hyperdrive.parameter_expressions import uniform,randint\n",
+    "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
