modified jupyter notebook with cluster shutdown code

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -294,6 +294,17 @@
     "os.makedirs(\"best_run_model_files\", exist_ok=True)\n",
     "joblib.dump(fitted_model, os.path.join(\"best_run_model_files\", \"model.pkl\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Delete the compute cluster\n",
+    "cpu_cluster.detach()\n",
+    "cpu_cluster.delete()"
+   ]
   }
  ],
  "metadata": {
