Incorporate project feedback

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -287,12 +287,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this step is necessary because the version of azureml-train-automl-runtime on the jupyter environment does not match \n",
+    "#the version used by AutoML\n",
+    "!pip uninstall -y azureml-train-automl-runtime\n",
+    "!pip install  azureml-train-automl-runtime==1.20.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Retrieve and save your best automl model.\n",
     "\n",
     "### YOUR CODE HERE ###\n",
     "best_run, fitted_model = automl_run.get_output()\n",
     "os.makedirs(\"best_run_model_files\", exist_ok=True)\n",
-    "joblib.dump(fitted_model, os.path.join(\"best_run_model_files\", \"model.pkl\"))"
+    "joblib.dump(fitted_model, os.path.join(\"best_run_model_files\", \"model.pkl\"))\n",
+    "\n",
+    "\n",
+    "#print the hyperparameters of the best model\n",
+    "from pprint import pprint\n",
+    "\n",
+    "def print_model(model, prefix=\"\"):\n",
+    "    for step in model.steps:\n",
+    "        print(prefix + step[0])\n",
+    "        if hasattr(step[1], 'estimators') and hasattr(step[1], 'weights'):\n",
+    "            pprint({'estimators': list(\n",
+    "                e[0] for e in step[1].estimators), 'weights': step[1].weights})\n",
+    "            print()\n",
+    "            for estimator in step[1].estimators:\n",
+    "                print_model(estimator[1], estimator[0] + ' - ')\n",
+    "        else:\n",
+    "            pprint(step[1].get_params())\n",
+    "            print()\n",
+    "\n",
+    "print_model(fitted_model)"
    ]
   },
   {
